option(ENABLE_autosaccade "Build autosaccade module" OFF)
option(ENABLE_gazedemo "Build ball gaze following demo" OFF)
option(ENABLE_reptest "Build representation tester" OFF)
option(ENABLE_vergence "Build vergence control demo" OFF)
option(ENABLE_calibrate "Build camera calibration" OFF)
option(ENABLE_view "Build basic viewer" ON)
option(ENABLE_soundDetectionDemo "Build sound source detection demo" OFF)
option(ENABLE_corner "Build corner detector" OFF)
option(ENABLE_dualCamTransform "Build event to frame transform" OFF)
option(ENABLE_IMUCalibDuper "Build IMU dumper for calibration" OFF)

if(ENABLE_autosaccade)
    add_subdirectory(autosaccade)
endif(ENABLE_autosaccade)

if(ENABLE_gazedemo)
    if(VLIB_DEPRECATED)
        add_subdirectory(gazeDemo)
    else()
        message("gazeDemo requires VLIB_DEPRECATED")
    endif()
endif(ENABLE_gazedemo)

if(ENABLE_reptest)
    if(VLIB_DEPRECATED)
        add_subdirectory(reptest)
    else()
        message("reptest requires VLIB_DEPRECATED")
    endif()
endif(ENABLE_reptest)

if(ENABLE_vergence)
    if(VLIB_DEPRECATED)
        add_subdirectory(vergenceDemo)
    else()
        message("vergenceDemo requires VLIB_DEPRECATED")
    endif()
endif(ENABLE_vergence)

if(ENABLE_calibrate)
    add_subdirectory(calibrate)
endif(ENABLE_calibrate)

if(ENABLE_view)
    add_subdirectory(view)
endif(ENABLE_view)

if(ENABLE_soundDetectionDemo)
    add_subdirectory(soundDetectionDemo)
endif(ENABLE_soundDetectionDemo)

if(ENABLE_dualCamTransform)
    add_subdirectory(dualCamTransform)
endif(ENABLE_dualCamTransform)

if(ENABLE_corner)
    add_subdirectory(corner)
endif(ENABLE_corner)

if(ENABLE_IMUCalibDumper)
    add_subdirectory(IMUCalibDumper)
endif()

