CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(PROJECTNAMELOCAL basicCFrameConverter)
PROJECT(${PROJECTNAMELOCAL})

SET(YARP_DIR "$ENV{YARP_ROOT}" CACHE LOCATION "where is yarp?")
FIND_PACKAGE(YARP)
#FIND_PACKAGE(EMORPHLIB)

FILE(GLOB folder_source source/*.cpp)
FILE(GLOB folder_header include/*.hpp)

SOURCE_GROUP("Source Files" FILES ${folder_source})
SOURCE_GROUP("Header Files" FILES ${folder_header})

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${YARP_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${EMORPHLIB_INCLUDE_DIRS})

#To link the unmasked_buffer class
#AUX_SOURCE_DIRECTORY($ENV(TCP2YARP)/src auxsrc)

ADD_EXECUTABLE(${PROJECTNAMELOCAL} 	${folder_source} ${folder_header})

TARGET_LINK_LIBRARIES (	${PROJECTNAMELOCAL} 
			            ${YARP_LIBRARIES}
			            #${EMORPHLIB_LIBRARIES}
                        eMorphLib
                        )

#SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/build)
#SET(EXECUTABLE_OUTPUT_PATH $ENV{MODULES_ROOT}/bin)

INSTALL_TARGETS(/bin ${PROJECTNAMELOCAL})
