#Copyright: (C) 2010 RobotCub Consortium
# Authors: Francesco Rea
# CopyPolicy: Released under the terms of the GNU GPL v2.0.
cmake_minimum_required(VERSION 2.6)


#add_subdirectory  (  bottleRepeater               )
#add_subdirectory  (  binFile2yarp                 )
#add_subdirectory  (  dvsCalibrator                )
#add_subdirectory  (  eventDriven                  )
#add_subdirectory  (  emorphUnmaskTest             )
#add_subdirectory  (  eventProcessor               )
#add_subdirectory  (  testWings                    )
#add_subdirectory  (  staticCalib                    )


